charts/home-apps/otel-lgtm/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otel-vaam-store
  labels:
    app: otel-lgtm
    team: ssegning-home
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - otel.vaam.store
  rules:
    - matches:
        - path: { type: PathPrefix, value: /v1/traces }
        - path: { type: PathPrefix, value: /v1/metrics }
        - path: { type: PathPrefix, value: /v1/logs }
      backendRefs:
        - name: otel-lgtm
          port: 4318
